Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/LambdaConv29.out
LambdaConv29.java:14:24: compiler.warn.potential.lambda.found
- compiler.err.warnings.and.werror
1 error
1 warning
